# Python-software-engineering

./: .gitignore  CODE_OF_CONDUCT.md  README.md  environment.yml  python_software_engineering.pptx  python_software_engineering_linux64_conda_specs.txt
docs/: README.md  README.md~
source-code/: README.md  oo_vs_functional.ipynb  prime_time.ipynb  pydantic.ipynb
source-code/api-design/: README.md  positional_vs_keyword_arguments.ipynb
source-code/code-organization/: README.md  my_script.py
source-code/code-testing/: README.md
source-code/data-structures/: README.md  defaultdict.ipynb
source-code/decorators/: decorator.py  memoize.py
source-code/descriptors/: typed_property.py
source-code/design-patterns/: README.md  decorator_design_pattern.ipynb  iterator_design_pattern.ipynb  state_machine_design_pattern.ipynb
source-code/design-patters/: README.md  factory_design_pattern.ipynb  strategy_design_pattern.ipynb
source-code/error-handling/: README.md  data.txt  data_not_ok.txt  simple.py
source-code/functional-programming/: README.md  functional_programming_style.ipynb  persistent_binary_search_tree.ipynb  persistent_lists.ipynb  sieve_of_eratosthenes.ipynb
source-code/iterators/: README.md  iterators_vs_generators.ipynb
source-code/metaclasses/: README.md  metaclasses.ipynb
source-code/object-orientation/: README.md  attr_intro.ipynb  avoiding_class_hierarchies.ipynb  dynamic_classes.ipynb  (+4 more)
source-code/pyinstaller/: .gitignore  CMakeLists.txt  README.md  build_apps.sh  data.csv  requirements.txt
source-code/pyinstaller/src/: prod_columns.py  sum_columns.py
source-code/pyinstaller/src/lib/: funcs.py
(+65 files in other folders)
